add to cart completely responsive

--- a/index.html
+++ b/index.html
@@ -21,40 +21,50 @@
         <input type="text" class="input">
     </form>
             <!----Product---->
-
+        <div class="buttons_container">
+        </div>
         <div class="productContainer">
-        <div class="product" data-id="soap">
+        <!-- <div class="product" data-id="soap">
             <h2 class="productName">SAFEGUARD</h2>
-            <button class="addToCartButton"data-id="soap">Button</button>
+            <button class="addToCartButton">Button</button>
+            <span class="price">20</span>
         </div>
         <div class="product" data-id="soap">
             <h2 class="productName">BIODERM</h2>
-            <button class="addToCartButton"data-id="soap">Button</button>
+            <button class="addToCartButton">Button</button>
+            <span class="price">10</span>
         </div>
         <div class="product" data-id="detergent">
             <h2 class="productName">WINGS</h2>
-            <button class="addToCartButton"data-id="detergent">Button</button>
+            <button class="addToCartButton">Button</button>
+            <span class="price">20</span>
         </div>
         <div class="product" data-id="teethCare">
             <h2 class="productName">COLGATE</h2>
-            <button class="addToCartButton" data-id="teethCare">Button</button>
+            <button class="addToCartButton">Button</button>
+            <span class="price">50</span>
         </div>
         <div class="product" data-id="skinCare">
             <h2 class="productName">HEIMISH</h2>
-            <button class="addToCartButton" data-id="skinCare">Button</button>
+            <button class="addToCartButton">Button</button>
+            <span class="price">200</span>
         </div>
         <div class="product" data-id="skinCare">
             <h2 class="productName">TONER</h2>
-            <button class="addToCartButton" data-id="skinCare">Button</button>
-        </div>
+            <button class="addToCartButton">Button</button>
+            <span class="price">200</span>
+        </div> -->
     </div>
+    <div class="total">
+        <p class = "totalPrice" style="color: black; font-size: 2rem">0</p>
 
+    </div>
     <div class="cartContainer">
-        
+        <button class="clear-cart">clear cart</button>
     </div>
 
 
 
 <script src="main.js"></script>
 </body>
-</html>
+</html> 
